--- a/windup.info.yml
+++ b/windup.info.yml
@@ -1,14 +1,11 @@
 name: Windup
-description: A clean theme for Drupal 8
-core: 8.0.x
+description: 'A clean theme for Drupal 8.'
+core: 8.x
 type: theme
 screenshot: screenshot.png
-
-# Remove unwanted CSS.
 stylesheets-remove:
   - core/modules/system/css/system.theme.css
   - core/modules/system/css/system.menus.css
-
 # Stylesheets
 #
 # Don't add any external libraries (e.g. normalize.css) here, use bower and
@@ -26,12 +23,10 @@ stylesheets-remove:
 # DO NOT REMOVE OR EDIT BETWEEN THESE LINES
 # bower:js
 # endbower
-
 libraries:
-    - windup/global-styling
-
+  - windup/global-styling
 regions:
-  - header: Header
-  - help: Help
-  - content: Content
-  - footer: Footer
+  header: Header
+  help: Help
+  content: Content
+  footer: Footer
